fixed hero spacing

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -37,19 +37,20 @@
     }
     @include respond(tab-port) {
       font-size: 3.6rem;
-      text-align: center;
     }
     @include respond(phone) {
-      font-size: 3.5rem;
+      font-size: 3rem;
       line-height: 1.5;
     }
     @include respond(phone-xs) {
-      font-size: 2.8rem;
+      font-size: 2.5rem;
     }
   }
 
   .hero-subtitle {
     display: flex;
+    flex-wrap: wrap;
+
     .hero-subtitle-text {
       font-size: 4rem;
       font-weight: 700;
@@ -58,34 +59,38 @@
 
       @include respond(tab-land) {
         font-size: 3rem;
+        margin-bottom: 0;
       }
       @include respond(tab-port) {
         font-size: 2.9rem;
-        text-align: center;
       }
       @include respond(phone) {
-        font-size: 2.8rem;
+        font-size: 2.3rem;
         line-height: 1.5;
       }
       @include respond(phone-xs) {
-        font-size: 2.7rem;
+        font-size: 2rem;
       }
     }
 
     .hero-subtitle-show {
       padding-left: 1rem;
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      min-width: -webkit-fill-available;
+      @include respond(tab-land) {
+        min-height: 6rem;
+        min-width: 440px;
+        margin-bottom: 3.2rem;
+        padding-left: 0;
+      }
     }
 
     .hero-subtitle-show-active {
       opacity: 1;
       position: absolute;
       transition: all 2s ease-in-out 0s;
+      min-width: fit-content;
     }
     .hero-subtitle-show-hidden {
+      min-width: fit-content;
       position: absolute;
       transform: rotateX(90deg);
       opacity: 0;
